Added error message for dialog in TeachersActivity

--- a/app/src/main/res/layout/activity_teachers.xml
+++ b/app/src/main/res/layout/activity_teachers.xml
@@ -2,14 +2,16 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.NotesActivity"
     android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <ListView
             android:id="@+id/teacherlist"
@@ -19,7 +21,7 @@
             android:cacheColorHint="@android:color/transparent"
             android:divider="@null"
             />
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
