Updated listview adapters

--- a/app/src/main/res/drawable/baseline_room_24.xml
+++ b/app/src/main/res/drawable/baseline_room_24.xml
@@ -6,5 +6,5 @@
         android:tint="?attr/colorControlNormal">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M14,6v15L3,21v-2h2L5,3h9v1h5v15h2v2h-4L17,6h-3zM10,11v2h2v-2h-2z"/>
+        android:pathData="M12,2C8.13,2 5,5.13 5,9c0,5.25 7,13 7,13s7,-7.75 7,-13c0,-3.87 -3.13,-7 -7,-7zM12,11.5c-1.38,0 -2.5,-1.12 -2.5,-2.5s1.12,-2.5 2.5,-2.5 2.5,1.12 2.5,2.5 -1.12,2.5 -2.5,2.5z"/>
 </vector>
