Added AddSubjectDialog in AlertDialogsHelper, Deleted hardcorded strings in MainActivity and Fragments

--- a/app/src/main/res/layout/listview_week_adapter.xml
+++ b/app/src/main/res/layout/listview_week_adapter.xml
@@ -2,7 +2,6 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="7dp"
@@ -101,7 +100,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Teacher"
+            android:text="@string/teacher"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="18sp"
