Updated strings and small changes

--- a/app/src/main/res/layout/dialog_add_homework.xml
+++ b/app/src/main/res/layout/dialog_add_homework.xml
@@ -15,7 +15,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/subject_homework" />
+            android:text="@string/subject_dialog" />
 
         <EditText
             android:id="@+id/subjecthomework"
@@ -36,7 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/description" />
+            android:text="@string/description_dialog" />
 
         <EditText
             android:id="@+id/descriptionhomework"
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/deadline" />
+            android:text="@string/deadline_dialog" />
 
         <TextView
             android:id="@+id/datehomework"
