--- a/app/src/main/res/layout/dialog_add_note.xml
+++ b/app/src/main/res/layout/dialog_add_note.xml
@@ -16,7 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/title"
+            android:text="@string/title_dialog"
             android:textAlignment="center" />
 
         <EditText
