--- a/app/src/main/res/layout/listview_notes_adapter.xml
+++ b/app/src/main/res/layout/listview_notes_adapter.xml
@@ -27,7 +27,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="2dp"
-            android:text="@string/title"
+            android:text="@string/title_dialog"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textSize="18sp"
