Added AddTeacherDialog and EditTeacherDialog in AlertDialogsHelper

--- a/app/src/main/res/layout/listview_teachers_adapter.xml
+++ b/app/src/main/res/layout/listview_teachers_adapter.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:layout_marginTop="4dp"
-            android:text="@string/email_list"
+            android:text="@string/email"
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -43,7 +43,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="2dp"
-            android:text="@string/name_list"
+            android:text="@string/name"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="18sp"
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="@string/phone_number_list"
+            android:text="@string/phone_number"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="18sp"
@@ -73,7 +73,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
-            android:text="@string/post_list"
+            android:text="@string/post"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="18sp"
