--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -2,16 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark" />
+            <solid android:color="@android:color/white" />
             <corners android:radius="5dp" />
         </shape>
     </item>
 
-    <item
-        android:bottom="5dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp">
+    <item >
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
             <corners android:radius="5dp" />
