--- a/app/src/main/res/layout/listview_notes_adapter.xml
+++ b/app/src/main/res/layout/listview_notes_adapter.xml
@@ -3,10 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="7dp"
-    android:paddingRight="7dp"
-    android:paddingLeft="7dp"
     android:descendantFocusability="beforeDescendants">
+
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
+        card_view:cardCornerRadius="5dp"
+        card_view:cardElevation="5dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,20 +28,20 @@
             android:id="@+id/titlenote"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="4dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="2dp"
-            android:text="@string/title_dialog"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="2dp"
+            android:text="@string/title"
             android:textAlignment="center"
             android:textAllCaps="true"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
     </android.support.constraint.ConstraintLayout>
-
+    </android.support.v7.widget.CardView>
 </FrameLayout>
