--- a/app/src/main/res/layout/dialog_add_note.xml
+++ b/app/src/main/res/layout/dialog_add_note.xml
@@ -17,7 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_weight=".3"
             android:text="@string/title_dialog"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@android:color/black" />
 
         <EditText
             android:id="@+id/titlenote"
@@ -25,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".7"
             android:imeOptions="actionDone"
+            android:inputType="text"
             android:singleLine="true" />
     </LinearLayout>
 
