--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -15,7 +15,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/subject_dialog" />
+            android:text="@string/subject_dialog"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/black" />
 
         <EditText
             android:id="@+id/subject_dialog"
@@ -23,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_weight=".7"
             android:imeOptions="actionDone"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 
     <LinearLayout
@@ -36,7 +39,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/teacher_dialog" />
+            android:text="@string/teacher_dialog"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/black" />
 
         <EditText
             android:id="@+id/teacher_dialog"
@@ -44,7 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_weight=".7"
             android:imeOptions="actionDone"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 
     <LinearLayout
@@ -57,7 +63,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/room_dialog" />
+            android:text="@string/room_dialog"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/black" />
 
         <EditText
             android:id="@+id/room_dialog"
@@ -66,7 +74,8 @@
             android:layout_weight=".7"
             android:imeOptions="actionDone"
             android:inputType="number"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 
     <LinearLayout
@@ -79,7 +88,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/time_from_dialog" />
+            android:text="@string/time_from_dialog"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/black" />
 
         <TextView
             android:id="@+id/from_time"
@@ -102,7 +113,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/time_to_dialog" />
+            android:text="@string/time_to_dialog"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/black" />
 
         <TextView
             android:id="@+id/to_time"
@@ -136,4 +149,6 @@
             style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
 
     </LinearLayout>
+
+
 </LinearLayout>
