--- a/app/src/main/res/layout/dialog_add_teacher.xml
+++ b/app/src/main/res/layout/dialog_add_teacher.xml
@@ -16,33 +16,16 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight=".3"
             android:text="@string/name_dialog"
-            android:layout_weight=".3" />
+            android:textColor="@android:color/black" />
 
         <EditText
             android:id="@+id/name_dialog"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".7"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/post_dialog"
-            android:layout_weight=".3"/>
-
-        <EditText
-            android:id="@+id/post_dialog"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".7"/>
+            android:layout_weight=".7"
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
@@ -55,7 +38,29 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="@string/phonenumber_dialog" />
+            android:text="@string/post_dialog"
+            android:textColor="@android:color/black" />
+
+        <EditText
+            android:id="@+id/post_dialog"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".7"
+            android:inputType="text" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".3"
+            android:text="@string/phonenumber_dialog"
+            android:textColor="@android:color/black" />
 
         <EditText
             android:id="@+id/phonenumber_dialog"
@@ -75,14 +80,16 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight=".3"
             android:text="@string/email_dialog"
-            android:layout_weight=".3"/>
+            android:textColor="@android:color/black" />
 
         <EditText
             android:id="@+id/email_dialog"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".7"/>
+            android:layout_weight=".7"
+            android:inputType="textEmailAddress"/>
     </LinearLayout>
 
     <LinearLayout
