--- a/app/src/main/res/layout/listview_week_adapter.xml
+++ b/app/src/main/res/layout/listview_week_adapter.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -28,11 +29,11 @@
 
             <TextView
                 android:id="@+id/subject"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="34dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/subject"
                 android:textAlignment="center"
                 android:textAllCaps="true"
@@ -41,7 +42,9 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                card_view:layout_constraintEnd_toStartOf="@+id/popupbtn"
+                card_view:layout_constraintHorizontal_bias="0.384" />
 
             <View
                 android:id="@+id/line"
@@ -127,6 +130,17 @@
                 app:layout_constraintEnd_toEndOf="@+id/line"
                 app:layout_constraintStart_toStartOf="@+id/line"
                 app:layout_constraintTop_toBottomOf="@+id/line" />
+
+            <ImageView
+                android:id="@+id/popupbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:background="?android:selectableItemBackground"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintTop_toTopOf="@+id/subject"
+                card_view:srcCompat="@drawable/baseline_expand_more_black_24" />
+
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
