Added "Select Color" function for listview items, Updated add and edit subject dialogs

--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -17,7 +17,8 @@
             android:layout_weight=".3"
             android:text="@string/subject_dialog"
             android:textAlignment="textStart"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/subject_dialog"
@@ -41,7 +42,8 @@
             android:layout_weight=".3"
             android:text="@string/teacher_dialog"
             android:textAlignment="textStart"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/teacher_dialog"
@@ -65,7 +67,8 @@
             android:layout_weight=".3"
             android:text="@string/room_dialog"
             android:textAlignment="textStart"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/room_dialog"
@@ -90,7 +93,8 @@
             android:layout_weight=".3"
             android:text="@string/time_from_dialog"
             android:textAlignment="textStart"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/from_time"
@@ -99,6 +103,7 @@
             android:layout_weight=".3"
             android:text="@string/select_time"
             android:textAllCaps="true"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -115,7 +120,8 @@
             android:layout_weight=".3"
             android:text="@string/time_to_dialog"
             android:textAlignment="textStart"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/to_time"
@@ -123,6 +129,29 @@
             android:layout_height="wrap_content"
             android:layout_weight=".3"
             android:text="@string/select_time"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/select_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginLeft="50dp"
+            android:background="@color/white"
+            android:text="@string/select_color"
+            android:textAlignment="center"
             android:textAllCaps="true"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -149,6 +178,5 @@
             style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
 
     </LinearLayout>
-
 
 </LinearLayout>
