Added Exams activity

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,12 @@
 
     <group android:id="@+id/menu_mid"
         android:checkableBehavior="none">
+
+        <item
+            android:id="@+id/exams"
+            android:icon="@drawable/baseline_school_black_18"
+            android:title="@string/exams" />
+
         <item
             android:id="@+id/teachers"
             android:icon="@drawable/baseline_people_black_18"
